Fixed some firefox bugs

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         }(document, 'script', 'facebook-jssdk'));</script>
         
         <div id="images-list">
-            <div id="addImg"><input id="newImage-ipt" type="file"></div>
+            <div onclick="document.getElementById('newImage-ipt').click();" id="addImg"></div><input name="newImage-ipt" id="newImage-ipt" type="file" />
             <img src="images/img-1.png" class="thumb"/>
             <img src="images/img-2.jpg" class="thumb" />
             <img src="images/img-3.jpg" class="thumb" />
