Adding loading features and layout fixies

--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
                     <div class="fb-like" data-href="http://felipenmoura.org" data-send="false" data-layout="button_count" data-width="450" data-show-faces="false"></div>
                     <!-- G+ -->
                     <div class="g-plusone" data-href="http://felipenmoura.org"></div>
+                    <a class="github-link" href="https://github.com/felipenmoura/html5-imager" target="_blank"><img src="images/github.jpg"></a>
 
                     <!-- Place this tag after the last +1 button tag. -->
                     <script type="text/javascript">
@@ -78,6 +79,7 @@
             </div>
             <div id="edited-image"><canvas id="canvas"></canvas></div>
         </div>
+        <div id="loadingEl"></div>
         
         <script src="scripts/jquery-ui-1.10.0.custom/js/jquery-1.9.0.js"></script>
         <script src="scripts/jquery-ui-1.10.0.custom/js/jquery-ui-1.10.0.custom.min.js"></script>
