--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title></title>
+        <title>HTML5 Imager</title>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         
         <link type="text/css" href="styles/default.css" rel="stylesheet" />
